<resources>
    <string name="app_name">Drugger</string>
    <string name="preference_name">xyz.drugger.app.SHARED_PREFERENCES</string>
    <string name="access_token">access_token</string>
    <string name="base_url">https://drugger.xyz</string>
    <string name="sign_up_instruction">Sign Up</string>
    <string name="signup_instruction">Provide some basic information to get started.</string>
    <string name="login_instruction">Provide your work recognized phone number and password.</string>
    <string name="signup_phone">Phone Number</string>
    <string name="signup_password">Password</string>
    <string name="signup">SignUp</string>
    <string name="refresh_token">refresh_token</string>
    <string name="user_id">user_id</string>
    <string name="employer_json">employer</string>
    <string name="employer">employer</string>
    <string name="employername">employername</string>
    <string name="roles">roles</string>
    <string name="role_id">role_id</string>
    <string name="rolename">rolename</string>
    <string name="language_id">language_id</string>
    <string name="profile">profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="description1">Photos</string>
    <string name="profile_title_1">Joined</string>
    <string name="profile_desc_1">123</string>
    <string name="profile_title_2">Sales</string>
    <string name="profile_desc_2">0</string>
    <string name="profile_title_3">Following</string>
    <string name="profile_desc_3">456</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="products">View Products</string>
    <string name="vendor_receipt">Receive Goods</string>
    <string name="point_of_sale">Point of Sale</string>
    <string name="login">Log In</string>
    <string name="login_button">Log In</string>
    <string name="product_categories">Product Categories</string>
    <string name="store_choice">Product Selling Store</string>
    <string name="none">None</string>
    <string name="default_product_image">/static/profileuploads/product-default.jpg</string>
    <string name="cart_title">0</string>
    <string name="search">Search</string>
    <string name="charge">Charge</string>
    <string name="receipt_default">Sales Receipt</string>
    <string name="subtotal">Total</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="button_save">Save</string>
    <string name="product_image">Product Image</string>
    <string name="product_description">Product Description</string>
    <string name="expiry_date_hint">DD-MM-YYYY</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="sales_price">Sales Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_product_image_instruction">Select Product Image to change</string>
    <string name="cost_price">Cost Price</string>
    <string name="product_quantity">Inventory Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>
    <string name="add_catalog">Add Catalog</string>
    <string name="holding_store_choice">Product Holding Store</string>
    <string name="cost">Cost</string>
    <string name="sales">Sales</string>
    <string name="product">Product</string>
    <string name="product_quantity_description">0 in stock at warehouse</string>
    <string name="edit_catalog_description">Brief Catalog Description</string>
    <string name="edit_catalog_name">Catalog Name</string>
    <string name="edit_catgroup_description">Category Description</string>
    <string name="parent_catalog">Choose Parent Catalog</string>
    <string name="edit_catgroup_name">Category Name</string>
    <string name="shelf_number">Shelf Number</string>
    <string name="profile_employer_value">Employer Name</string>
    <string name="profile_employer">Employer</string>
    <string name="addproducts">Add Products</string>
    <string name="first_slide_title">Working from?</string>
    <string name="first_slide_desc">Select a store where you\'re working today.</string>
    <string name="sellingstore_id">sellingstore_id</string>
    <string name="sellingstore_name">sellingstore_name</string>
    <string name="return_product">Product Return</string>
    <string name="add_profile_image_instruction">Click the image to change profile picture</string>
    <string name="profile_field1">First Name</string>
    <string name="profile_field3">Last Name</string>
    <string name="profile_address_1">Address</string>
    <string name="profile_country">Country</string>
    <string name="profile_state">State</string>
    <string name="profile_city">City</string>
    <string name="return_instructions">Tap this item to return it.</string>
    <string name="ref_rep">type REF for refund, REP for replace.</string>
    <string name="refundorreplace">Refund or Replace</string>
    <string name="creditamount">Return Amount</string>
    <string name="quantity">Quantity</string>
    <string name="shelf">Shelf</string>
</resources>
