<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_white_24"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/add_catalog"
        android:title="@string/add_catalog"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/add_category"
        android:title="@string/add_category"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/add_product"
        android:title="@string/add_product"
        app:showAsAction="collapseActionView" />

</menu>